# creatopedia

./: .env.local.example  .gitignore  DEPLOYMENT_CHECKLIST.md  ENV_VARIABLES_REFERENCE.md  PRODUCTION_SETUP.md  dump_db.py  immmmmmmmmmmmmmmmmmmmmmmmm  main.py  pyproject.toml  scratch_check_ads.py
alembic/: env.py
alembic/versions/: 534075454c35_add_role_to_creator.py  6cfd4fe54cfc_add_subdomain_visits_table.py  badfa881bc8b_initial_schema.py  cce68776c486_add_cascades.py
app/: main.py
app/common/: base_model.py  enums.py  exceptions.py  pagination.py
app/core/: config.py  database.py  security.py  storage.py
creatopedia/: .dockerignore  .env.local.example  Dockerfile  IMPLEMENTATION_COMPLETE.md  README.md  SUBDOMAIN_QUICK_START.md  contents.md  documentation.md  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.json  update_enhanced_ui.sh  vercel.json
creatopedia/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts
creatopedia/docs/: PLANS_INDEX.md  PLAN_01_FOUNDATION.md  PLAN_02_PUBLIC_PAGE.md  PLAN_03_ADMIN_AUTH.md  PLAN_04_PROMPT_CRUD.md  PLAN_05_ANALYTICS.md  PLAN_06_SETTINGS.md  PLAN_07_POLISH.md  SRS.md  SUBDOMAIN_SETUP.md  ad-space.md  dbchanges.md  phase-wise-plan.md
creatopedia/lib/: analytics.ts  cache.ts  crypto.ts  instagram.ts  oembed.ts  subdomain-utils.ts  subdomain.ts  validations.ts
creatopedia/scratch/: check-col.ts  check_column.ts  check_prompt.ts  check_stats.ts  debug-ads.ts  reseed-placement.ts  test-placements.ts
scripts/: promote_admin.py  set_b2_cors.py  test_b2_write.py
(+188 files in other folders)
